add media query for carousel

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -37,8 +37,7 @@
   }
 
   .container {
-    background-color: #f4f4f2;
-    color: #e62804;
+    background-color: #e62804;
     display: flex;
     font-family: Arial, sans-serif;
     justify-content: center;
