--- a/components/Carousel/carousel.module.css
+++ b/components/Carousel/carousel.module.css
@@ -3,11 +3,11 @@
   width: 400px;
   height: 250px;
   position: relative;
-  perspective: 1200px;
+  perspective: 1000px;
 }
 
 .carousel {
-  height: 100%;
+  height: 400px;
   width: 100%;
   position: absolute;
   transform-style: preserve-3d;
@@ -38,9 +38,6 @@
   align-items: center;
 }
 
-
-
-
 .a {
   background: #ed1c24;
 }
@@ -63,19 +60,89 @@
 .next, .prev {
   color: #444;
   position: absolute;
-  top: 100px;
+  top: calc(50% - (1em + 2em)/2);  /* Centrage vertical sans utiliser transform */
   padding: 1em 2em;
   cursor: pointer;
-  background: #CCC;
+  background: rgb(83, 81, 81);
   border-radius: 5px;
   border-top: 1px solid #FFF;
   box-shadow: 0 5px 0 #999;
   transition: box-shadow 0.1s, top 0.1s;
 }
-.next:hover, .prev:hover { color: #000; }
-.next:active, .prev:active {
-  top: 104px;
-  box-shadow: 0 1px 0 #999;
+
+.next:hover, .prev:hover {
+  color: #000;
 }
-.next { right: 5em; }
-.prev { left: 5em; }
+
+.next {
+  right: 0;
+  clip-path: polygon(100% 50%, 80% 0, 80% 100%);
+  margin-right: -320px;
+}
+
+.prev {
+  left: 0;
+  clip-path: polygon(0 50%, 20% 0, 20% 100%);
+  margin-left: -320px;
+}
+
+@media (min-width: 601px) and (max-width: 1200px) {
+  .carouselContainer {
+    width: 360px;
+    height: 225px;
+  }
+
+  .carousel {
+    width: 360px;
+    height: 225px;
+  }
+
+  .item {
+    width: 360px;
+    height: 225px;
+  }
+
+  .next, .prev {
+    top: calc(50% - (0.75em + 1.5em)/2);
+    padding: 0.75em 1.5em;
+  }
+
+  .next {
+    margin-right: -288px;
+  }
+
+  .prev {
+    margin-left: -288px;
+  }
+}
+
+@media (max-width: 600px) {
+  .carouselContainer {
+    width: 200px;
+    height: 125px;
+  }
+
+  .carousel {
+    width: 200px;
+    height: 125px;
+  }
+
+  .item {
+    width: 200px;
+    height: 187.5px;
+  }
+
+  .next, .prev {
+    top: calc(50% - (0.5em + 1em)/2);
+    padding: 0.5em 1em;
+  }
+
+  .next {
+    margin-right: -160px;
+  }
+
+  .prev {
+    margin-left: -160px;
+  }
+}
+
