--- a/components/Carousel/carousel.module.css
+++ b/components/Carousel/carousel.module.css
@@ -107,6 +107,43 @@
   cursor: pointer;
   padding: 8px;
   margin: 0 8px;
+  border: 2px solid transparent;
+  background-color: #e01e16;
+  color: #f4f4f4;
+  border-radius: 5px;
+  transition: background-color 0.3s ease, border-color 0.3s ease;
+  font-weight: bold;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.button:nth-child(2) {
+  background-color: #ed3a0c; 
+}
+
+.button:nth-child(3) {
+  background-color: #ee6406; 
+}
+
+.button:nth-child(1):hover {
+  color: #e01e16;
+  background-color: #e9e9e9;  
+  border: 2px solid #e01e16;
+}
+
+.button:nth-child(2):hover {
+  color: #ed3a0c; 
+  background-color: #e9e9e9; 
+  border: 2px solid #ed3a0c;
+}
+
+.button:nth-child(3):hover {
+  color: #ee6406;
+  background-color: #e9e9e9;
+  border: 2px solid #ee6406;  
+}
+
+.button:active {
+  transform: translateY(2px); /* effet de pression lors du clic */
 }
 
 @media (min-width: 601px) and (max-width: 1200px) {
