--- a/components/Carousel/carousel.module.css
+++ b/components/Carousel/carousel.module.css
@@ -117,12 +117,21 @@
 }
 
 .button:nth-child(2) {
-  background-color: #ed3a0c; 
+  background-color: #ed390c; 
 }
 
 .button:nth-child(3) {
+  background-color: #f05918; 
+}
+
+.button:nth-child(4) {
   background-color: #ee6406; 
 }
+
+.button:nth-child(5) {
+  background-color: #fa6500; 
+}
+
 
 .button:nth-child(1):hover {
   color: #e01e16;
@@ -137,13 +146,25 @@
 }
 
 .button:nth-child(3):hover {
+  color: #f05918;
+  background-color: #e9e9e9;
+  border: 2px solid #f05918;  
+}
+
+.button:nth-child(4):hover {
   color: #ee6406;
   background-color: #e9e9e9;
   border: 2px solid #ee6406;  
 }
 
+.button:nth-child(5):hover {
+  color: #fa6500;
+  background-color: #e9e9e9;
+  border: 2px solid #fa6500;  
+}
+
 .button:active {
-  transform: translateY(2px); /* effet de pression lors du clic */
+  transform: translateY(2px);
 }
 
 @media (min-width: 601px) and (max-width: 1200px) {
