--- a/components/Header/header.module.css
+++ b/components/Header/header.module.css
@@ -19,7 +19,7 @@
   
   .link {
     text-decoration: none;
-    color: #f4f4f4;
+    color: #0e0101;
     padding: 5px 10px;
     border-radius: 5px;
     transition: background-color 0.3s ease;
@@ -27,7 +27,7 @@
   
   .link:hover {
     background-color: #ee6406;
-    color: #e9e9e9;
+    color: #262222;
   }
   
   .link:active {
