--- a/components/Footer/footer.module.css
+++ b/components/Footer/footer.module.css
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-wrap: wrap;
+    box-sizing: border-box;
   }
 
   .link {
@@ -32,5 +32,4 @@
   .nav {
     display: flex;
     gap: 20px;
-    margin-right: 100px;
   }
